--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
     "jest": "^25.4.0"
+  },
+  "dependencies": {
+    "word-list": "^3.1.0"
   }
 }
